modal fix spacing & text change

--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -31,6 +31,8 @@
     }
     &--last-centered {
       margin: 1rem auto 1rem auto;
+            padding-bottom: 2em;
+
     }
     &--bottom-offset {
       position: absolute;
